5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1764_1576.log
== TEST (2019-05-23 16:21:01) 
-- CODE:
from numpy import *
eusapia = array(eval(input("")))
barsanulfo = array(eval(input("")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:22:32) 
-- CODE:
from numpy import *
eusapia = array(eval(input("jogadas de eusapia: ")))
barsanulfo = array(eval(input("jogadas de barsanulfo: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:59:07) 
-- CODE:
from numpy import *
eusapia = array(eval(input("jogadas de eusapia: ")))
barsanulfo = array(eval(input("jogadas de barsanulfo: ")))
i = 0
eusapia = 0
barsanulfo = 0
while(i<len(eusapia))
-- ERROR:
File "XXXX", line 7
    while(i<len(eusapia))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:59:16) 
-- CODE:
from numpy import *
eusapia = array(eval(input("jogadas de eusapia: ")))
barsanulfo = array(eval(input("jogadas de barsanulfo: ")))
i = 0
eusapia = 0
barsanulfo = 0
while(i< len(eusapia)):
-- ERROR:
File "XXXX", line 8
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:59:22) 
-- CODE:
from numpy import *
eusapia = array(eval(input("jogadas de eusapia: ")))
barsanulfo = array(eval(input("jogadas de barsanulfo: ")))
i = 0
eusapia = 0
barsanulfo = 0
while (i< len(eusapia)):
-- ERROR:
File "XXXX", line 8
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
